--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
+  },
+  "resolutions": {
+    "eslint-plugin-react": "~7.27.0"
   }
 }
